Bug 238199 - [WPE][GTK] VideoFrameGStreamer missing include after -r291610 refactor
Summary: [WPE][GTK] VideoFrameGStreamer missing include after -r291610 refactor
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: ANGLE (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Alejandro G. Castro
URL:
Keywords: InRadar
Depends on:
Blocks: DMA-BUF
  Show dependency treegraph
 
Reported: 2022-03-22 05:54 PDT by Alejandro G. Castro
Modified: 2022-03-22 07:11 PDT (History)
9 users (show)

See Also:


Attachments
Patch (1.48 KB, patch)
2022-03-22 05:56 PDT, Alejandro G. Castro
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Alejandro G. Castro 2022-03-22 05:54:09 PDT
We did not add the required include to the new ANGLE texturemapper class.
Comment 1 Alejandro G. Castro 2022-03-22 05:56:01 PDT
Created attachment 455365 [details]
Patch
Comment 2 EWS 2022-03-22 07:10:40 PDT
Committed r291614 (248707@main): <https://commits.webkit.org/248707@main>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 455365 [details].
Comment 3 Radar WebKit Bug Importer 2022-03-22 07:11:16 PDT
<rdar://problem/90633265>