[WPE][GTK] VideoFrameGStreamer missing include after -r291610 refactor https://bugs.webkit.org/show_bug.cgi?id=238199

Patch by Alejandro G. Castro <alex@igalia.com> on 2022-03-22
Reviewed by Žan Doberšek.

We need to add the define we had in the file before the refactor.

* platform/graphics/texmap/GraphicsContextGLTextureMapperANGLE.cpp:


Canonical link: https://commits.webkit.org/248707@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291614 268f45cc-cd09-0410-ab3c-d52691b4dbfc